# basic-test-fastapi

./: .env-default  README.md  config.py  pyproject.toml  requirements.txt  run_deploy.sh  script_update_function.sh  script_upload_s3.sh  script_zip_lambda.sh  sql_app.db
app/: crud.py  database.py  main.py  models.py  schemas.py
app/api/v1/: routers.py
app/api/v1/endpoints/: items.py
app/controllers/: base_controller.py  item.py
app/core/controllers/: item.py
app/core/models/: item.py
app/models/: item.py
app/settings/: config.py  controller.py  database.py
app/static/templates/: index.html  item.html
docker/: Dockerfile  Dockerfile.aws.lambda
docs/collections/: README.md
scripts/: run_deploy.sh  script_zip_lambda.sh
scripts/deploy/: run_deploy_zip.sh
static/: styles.css
tests/: config.py
