[tool.poetry]
name = "app-fastapi"
version = "0.1.0"
description = ""
authors = ["FernandoCelmer <email@fernandocelmer.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
sqlmodel = "^0.0.6"
Jinja2 = "^3.1.2"
dynaconf = "^3.1.8"
uvicorn = "^0.17.6"
mangum = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
